--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "devDependencies": {
     "eslint": "^5.8.0",
     "parcel-bundler": "^1.10.3"
+  },
+  "dependencies": {
+    "lo": "^0.33.0",
+    "lodash": "^4.17.11",
+    "navigo": "^7.1.2"
   }
 }
